# XrayTIFF2h5

./: .gitignore  Makefile  README.md  Snakefile  binarize_h5.py  pyproject.toml  tif_to_h5.py
