[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Aron <aronpjansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.10.0"
Pillow = "^10.1.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
