[tool.poetry]
name = "data"
version = "0.1.0"
description = ""
authors = ["Aron <aronpjansen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
h5py = "^3.10.0"
click = "^8.1.7"
tifffile = "^2023.9.26"
tqdm = "^4.66.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
